flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b2_int_sep.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
IntExpr@0..11
  IntExpr@0..11 "0b1_010_001"
