flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b8_int_neg.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
PrefixExpr@0..11
  Minus@0..1 "-"
  IntExpr@1..11
    IntExpr@1..11 "0812345678"
