flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_binops_cmp_eq.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
BinExpr@0..4
  IntExpr@0..1
    IntExpr@0..1 "1"
  CmpEq@1..3 "=="
  IntExpr@3..4
    IntExpr@3..4 "1"
